LPS-63598 Set width to 50% to avoid overlaps

--- a/modules/apps/collaboration/message-boards/message-boards-web/src/main/resources/META-INF/resources/message_boards/css/main.scss
+++ b/modules/apps/collaboration/message-boards/message-boards-web/src/main/resources/META-INF/resources/message_boards/css/main.scss
@@ -152,11 +152,15 @@
 	}
 
 	@include sm {
+		.message-user-display {
+			width: 50%;
+		}
+
 		.social-interaction {
 			position: absolute;
 			right: 0;
 			top: 0;
-			width: 100%;
+			width: 50%;
 
 			& > div {
 				float: right;
