--- a/modules/apps/foundation/frontend-css/frontend-css-web/src/main/resources/META-INF/resources/taglib/_discussion.scss
+++ b/modules/apps/foundation/frontend-css/frontend-css-web/src/main/resources/META-INF/resources/taglib/_discussion.scss
@@ -78,12 +78,16 @@
 			position: absolute;
 			right: 0;
 			top: 0;
-			width: 100%;
+			width: 50%;
 
 			& > div {
 				float: right;
 				margin-right: 12px;
 			}
+		}
+
+		.lfr-discussion-message .lfr-discussion-message-author {
+			width: 50%;
 		}
 	}
 }
